# hexray

./: .gitignore  CMakeLists.txt  README.md
data/: Lecture8.hexray  beer.hexray  boxed.hexray  bumpmap.hexray  cornell_box.hexray  heightfield.hexray  kdtree_test.hexray  meshes.hexray  simple.hexray  smallpt.hexray  zaphod.hexray
data/hw10/: bokeh.hexray
data/hw12/: sphtri.hexray
scripts/: build_openexr.cmake  test_all_scenes.sh
src/: bbox.h  bitmap.cpp  bitmap.h  camera.cpp  camera.h  color.h  constants.h  environment.cpp  environment.h  geometry.cpp  geometry.h  heightfield.cpp  heightfield.h  lights.cpp  lights.h  main.cpp  main.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  node.h  scene.cpp  scene.h  sdl.cpp  sdl.h  shading.cpp  shading.h  threading.cpp  threading.h  util.cpp  util.h  vector.h
src/mt-examples/: mt-examples.cpp
